[gd_scene load_steps=6 format=3 uid="uid://dxn4rsbgonlyn"]

[ext_resource type="Script" path="res://main.gd" id="1_dux2x"]
[ext_resource type="PackedScene" uid="uid://2utfnmkx20pg" path="res://outfitsection.tscn" id="1_faok3"]
[ext_resource type="Texture2D" uid="uid://cfgcl2ntqdaef" path="res://Textures/outfit1.png" id="2_4a4w8"]
[ext_resource type="Texture2D" uid="uid://bgw2m30gvu38r" path="res://Textures/outfit2.png" id="3_ubk7e"]
[ext_resource type="Texture2D" uid="uid://c72pi100jtt3q" path="res://Textures/outfit3.png" id="4_g562m"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_dux2x")
outfits = [ExtResource("2_4a4w8"), ExtResource("3_ubk7e"), ExtResource("4_g562m")]

[node name="Outfitsection" parent="." instance=ExtResource("1_faok3")]
position = Vector2(-2, 544)
outfits = [ExtResource("2_4a4w8"), ExtResource("3_ubk7e"), ExtResource("4_g562m")]

[node name="Outfitsection2" parent="." instance=ExtResource("1_faok3")]
position = Vector2(0, 334)
outfits = [ExtResource("2_4a4w8"), ExtResource("3_ubk7e"), ExtResource("4_g562m")]

[node name="Outfitsection3" parent="." instance=ExtResource("1_faok3")]
position = Vector2(0, 135)
outfits = [ExtResource("2_4a4w8"), ExtResource("3_ubk7e"), ExtResource("4_g562m")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -506)
texture = ExtResource("2_4a4w8")

[node name="SubmitButton" type="Button" parent="."]
offset_left = -130.0
offset_top = 683.0
offset_right = 132.0
offset_bottom = 792.0
text = "Submit"

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
